feat: apply lint, remove code field
