# docs/api.yaml
@@ -56,7 +56,15 @@ paths:
     get:
       operationId: orders_list
       description: ''
-      parameters: []
+      parameters:
+      - name: shipping_start_date
+        in: query
+        description: shipping_start_date
+        type: string
+      - name: shipping_end_date
+        in: query
+        description: shipping_date
+        type: string
       responses:
         '200':
           description: ''
@@ -198,6 +206,11 @@ definitions:
         readOnly: true
       name:
         title: Name
+        type: string
+        maxLength: 255
+        minLength: 1
+      product:
+        title: Product
         type: string
         maxLength: 255
         minLength: 1
